# codecrypt

./: CMakeLists.txt
src/: CMakeHelpers.cmake  CMakeLists.txt
test/: CMakeLists.txt  fmtseq.cpp
